--- a/index.html
+++ b/index.html
@@ -7,22 +7,6 @@
 		<link rel="stylesheet" href="assets/style.css">
 	</head>
 	<body>
-		<div class="centerBox">
-			<h1>BadRecovery</h1>
-			<p>
-				BadRecovery (formerly OlyBmmer) is an exploit for ChromeOS devices,
-				<br>leveraging a vulnerability in recovery images to get arbitrary code execution or to chain to other exploits.
-			</p>
-			<p>
-				The exploit and writeup were released to the public on October 5th, 2024.
-			</p>
-		</div>
-		<div class="centerBox">
-			<p class="moreLineSpacing">
-				Read more on the <a href="https://github.com/BinBashBanana/badrecovery">GitHub</a>.
-				<br><a href="https://github.com/BinBashBanana/badrecovery/blob/master/writeup.md">Writeup</a>
-				<br><a href="builder.html">Web builder</a>
-			</p>
-		</div>
+		<a href="builder.html">Web builder</a>
 	</body>
 </html>
